--- a/style/style.css
+++ b/style/style.css
@@ -10,11 +10,16 @@ body {
 } */
 
 .segment {
-    padding: 250px 20% 20% 100px;
+    padding: 25% 15%;
+
+}
+
+.segment h1 {
+    font-size: 2.5rem;
 }
 
 #whereimfrom {
-    padding: 7% 15%;
+    padding: 25% 15%;
     position: relative;
     background-color: #272727;
 }
