--- a/style/style.css
+++ b/style/style.css
@@ -31,16 +31,18 @@ a {
 .name {
     font-weight: 700;
     padding: 12px 24px;
+    display: inline;
 }
 
-/* navbar */
-.navigation ul {
- list-style-type: none;   
- font-weight: 700;
+
+.navigation {
+    float: right;
+    padding: 12px 40px;
 }
 
-.navigation li {
-    float: left;
+.navigation a {
+    padding-left: 12px;
+    padding-right: 12px;
 }
 
 
