--- a/style/style.css
+++ b/style/style.css
@@ -19,13 +19,6 @@ a {
     font-size: 2.5rem;
 }
 
-/* where I'm from section  */
-#whereimfrom {
-    padding: 25% 15%;
-    position: relative;
-    background-color: #272727;
-}
-
 /* just my name thingie to be changed? */
 
 .name {
@@ -34,6 +27,8 @@ a {
     display: inline;
 }
 
+
+/* navbar stuff */
 
 .navigation {
     float: right;
@@ -49,3 +44,21 @@ a {
 ul {
     list-style-type: none;
 }
+
+/* where I'm from section  */
+#whereimfrom {
+    padding: 25% 15%;
+    position: relative;
+    background-image: url("https://images.unsplash.com/photo-1539236931660-5dc598663ed1?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1470&q=80");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-color: #272727;
+    /* text-shadow: 2px 2px #121212; */
+    /* font-size: 5rem; */
+    color: #121212;
+}
+
+#whereimfrom h1 {
+    font-size: 2.5rem;
+}
+
