--- a/style/style.css
+++ b/style/style.css
@@ -62,6 +62,57 @@ nav a {
     font-size: 2.5rem;
 }
 
+
+
+/* where I'm from section  */
+#whereimfrom2 {
+    /* text-align: center; */
+    /* padding: 17% 15%; */
+    /* position: relative; */
+    /* background-color: #272727; */
+    /* text-shadow: 2px 2px #121212; */
+    /* font-size: 5rem; */
+    /* padding: 5%; */
+    color: #fff;
+}
+
+#whereimfrom2 h1 {
+    font-size: 2.5rem;
+}
+
+.leftpanel {
+    padding: 20% 12%;
+    display: inline-block;
+    border: 2px solid green;
+    /* position: absolute; */
+    /* top: 0;
+    left: 0; */
+    /* width: 100%; */
+    /* height: 100%; */
+}
+
+.rightpanel {
+    display: inline-block;
+    background-image: url("https://images.unsplash.com/photo-1539236931660-5dc598663ed1?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1470&q=80");
+    border: 2px solid red;
+
+    position: absolute;
+    /* top: 0;
+    left: 0; */
+    width: 98%;
+    height: 98%;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+}
+
+
+
+
+
+
+
+
 /* where I'm now section */
 #whereimnow {
     padding: 25% 15%;
