--- a/style/style.css
+++ b/style/style.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Merriweather&display=swap');
+
+
 body {
     background-color: #121212; /*darktheme*/
     font-family: 'Merriweather', serif;
