--- a/style/style.css
+++ b/style/style.css
@@ -1,3 +1,4 @@
+/* import fonts */
 @import url('https://fonts.googleapis.com/css2?family=Merriweather&display=swap');
 
 
@@ -16,6 +17,9 @@ ul {
     list-style-type: none;
 }
 
+h2 {
+    font-size: 2.5rem;
+}
 
 /* sections */
 .segment {
@@ -55,8 +59,6 @@ nav a {
     background-repeat: no-repeat;
     background-size: cover;
     background-color: #272727;
-    /* text-shadow: 2px 2px #121212; */
-    /* font-size: 5rem; */
     color: #121212;
 }
 
@@ -69,8 +71,6 @@ nav a {
 /* where I'm now section */
 #whereimnow {
     padding: 25% 15%;
-    /* background-color: #ffffff; */
-    /* color: #121212; */
 }
 
 #whereimnow h1 {
@@ -95,10 +95,17 @@ nav a {
     margin: 12px;
 } 
 
-#whereimnow caption {
-    /* padding: 10px 20px; */
+
+.resume {
+    width: 60%;
+    /* margin-top: 12px; */
+    /* padding: 25px 12px; */
+    margin: auto;
+    margin-top: 25px;
+    padding: 15% 15%;
+    background-color: #272727;
 }
 
-h1 {
-    font-size: 1.5rem;
+.resume-block {
+    margin-bottom: 55px;
 }
