--- a/style/style.css
+++ b/style/style.css
@@ -95,7 +95,12 @@ nav a {
     margin: 12px;
 } 
 
+footer {
+    text-align: center;
+    margin-bottom: 2%;
+}
 
+/* resume page */
 .resume {
     width: 60%;
     /* margin-top: 12px; */
