--- a/style/style.css
+++ b/style/style.css
@@ -135,3 +135,8 @@ footer {
     margin-left: 5%;
     margin-right: 5%;
 }
+
+form {
+    background-color: #272727;
+    display: inline-block;
+}
